[package]
name = "bloom-server"
version = "1.31.0"
description = "HTTP REST API caching middleware, to be used between load balancers and REST API workers."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/valeriansaliou/bloom"
repository = "https://github.com/valeriansaliou/bloom.git"
keywords = ["proxy", "http", "api", "rest", "cache"]
categories = ["caching", "web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[[bin]]
name = "bloom"
path = "src/main.rs"
doc = false

[dependencies]
log = { version = "0.4", features = ["std"]}
toml = "0.5"
clap = { version = "3.2", features = ["std", "cargo"] }
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
futures = "0.3"
futures-cpupool = "0.1"
httparse = "1.3"
hyper = { version = "0.14", features = ["full"] }
tokio-core = "0.1"
r2d2 = "0.8"
r2d2_redis = "0.11"
redis = "0.12"
farmhash = "1.1"
brotli = "3.3"
rand = "0.7"
unicase = "2.6"
headers = "0.3.8"
http = "0.2.9"

[dev-dependencies]
tracing = "0.1.13"
tracing-subscriber = "0.2"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
dockertest = "0.3.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
strip = true
